# hraft

./: .gitignore  hraft.cabal  stack.yaml
src/: Raft.hs  Util.hs
src/Raft/: Types.hs
test/: Main.hs  RaftSpec.hs
